tests/NormalTests/paczka2/big_fuzzy/20925110.err
Error in line 2: uh7mINeV A708 17,8
Error in line 8: l6cbuPI S9 67,4
Error in line 12: 2CDnCsd S9 74,0
Error in line 26: sDo A708 -2,5
Error in line 24: sDo A708 37,3
Error in line 29: sDo A653 11,6
Error in line 34: FnoL A653 54,9
Error in line 39: FnoL S9 23,2
Error in line 44: sDo S9 46,4
Error in line 48: l6cbuPI S9 113,1
Error in line 56: oGbTA A708 47,6
Error in line 69: sDo A653 63,1
Error in line 80: sDo S9 82,0
Error in line 87: uh7mINeV S695 86,8
Error in line 97: obTA S9 105,7
Error in line 81: sDo A708 76,8
Error in line 96: oGbTA S9 39,9
Error in line 99: sDo S9 58,0
Error in line 104: FnoL A708 28,1
Error in line 118: FnoL A653 10,0
Error in line 122: A653 A653 37,4
Error in line 115: l6cbuPI A708 10,1
Error in line 130: sDo S9 3Z0,2
Error in line 128: 2CDnCsd S695 10,5
Error in line 126: sDo S9 77,6
Error in line 137: sDo A708 70,1
Error in line 152: 2CDnCsd S9 23,8
Error in line 154: oGbTA A653 37,7
Error in line 156: sDo S9 91,3
Error in line 162: FnoL S695 290,9
Error in line 175: A653 A708 88,6
Error in line 187: l6cbuPI S9 41,1
Error in line 190: l6cbuPI S695 26,9
Error in line 189: sDo S9 47,2
Error in line 192: l6cbuPI A708 16,1
Error in line 220: l6cbuPI A653 47,9
Error in line 208: A653 A708 35,0
Error in line 223: A653 A653 39,7
Error in line 235: uh7mINeV S9 31,6
